--- a/index.html
+++ b/index.html
@@ -5,14 +5,62 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Admin Dashboard</title>
+		<script
+			src="https://kit.fontawesome.com/e4073bc977.js"
+			crossorigin="anonymous"
+		></script>
+
 		<link rel="stylesheet" href="./normalize.css" />
 		<link rel="stylesheet" href="./styles.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<div class="grid-container">
 			<header id="header"></header>
 			<main id="main"></main>
-			<aside id="aside"></aside>
+			<aside id="aside">
+				<div class="main-bar">
+					<img src="./images/logo-cyan.png" alt="" />
+					<h1 class="title">Admin DashBoard</h1>
+				</div>
+				<ul>
+					<li class="dashboard-link">
+						<a href="#"><i class="fa-solid fa-house-user"></i> Home</a>
+					</li>
+					<li class="dashboard-link">
+						<a href="#"><i class="fa-solid fa-user"></i>Profile</a>
+					</li>
+					<li class="dashboard-link">
+						<a href="#"><i class="fa-solid fa-comment"></i>Messages</a>
+					</li>
+					<li class="dashboard-link">
+						<a href="#"><i class="fa-solid fa-clock-rotate-left"></i>History</a>
+					</li>
+					<li class="dashboard-link">
+						<a href="#"><i class="fa-solid fa-list-check"></i>Tasks</a>
+					</li>
+					<li class="dashboard-link">
+						<a href="#"><i class="fa-solid fa-users"></i>Communities</a>
+					</li>
+				</ul>
+				<ul>
+					<li class="dashboard-link">
+						<a href="#"><i class="fa-solid fa-gear"></i>Setting</a>
+					</li>
+					<li class="dashboard-link">
+						<a href="#"><i class="fa-solid fa-circle-question"></i>Support</a>
+					</li>
+					<li class="dashboard-link">
+						<a href="#"><i class="fa-solid fa-shield"></i>Privacy</a>
+					</li>
+				</ul>
+				<p class="signature">Created By Tomas Chapot</p>
+			</aside>
 		</div>
 	</body>
 </html>
