--- a/index.html
+++ b/index.html
@@ -21,7 +21,29 @@
 	</head>
 	<body>
 		<div class="grid-container">
-			<header id="header"></header>
+			<header id="header">
+				<nav class="nav-bar">
+					<i class="fa-solid fa-magnifying-glass"></i>
+					<input type="text" class="search-bar" />
+					<i class="fa-solid fa-bell left"></i>
+					<img src="./images/man-user-svgrepo-com.svg" alt="" />
+
+					<p class="username">Tomas Chapot</p>
+				</nav>
+				<div class="button-bar">
+					<img src="./images/man-user-svgrepo-com.svg" alt="" />
+					<div class="user-text">
+						<p>
+							<span>Hi there,</span><br />Tomas Chapot
+							<span>(@tomaschapot)</span>
+						</p>
+					</div>
+
+					<button class="button left">New</button>
+					<button class="button">Share</button>
+					<button class="button">Upload</button>
+				</div>
+			</header>
 			<main id="main"></main>
 			<aside id="aside">
 				<div class="main-bar">
