added section titles + projects div

--- a/index.html
+++ b/index.html
@@ -44,7 +44,22 @@
 					<button class="button">Upload</button>
 				</div>
 			</header>
-			<main id="main"></main>
+			<main id="main">
+				<div class="main-grid">
+					<div class="projects">
+						<h2>Your Projects</h2>
+						<div class="project-grid"></div>
+					</div>
+					<div class="announcements">
+						<h2>Announcements</h2>
+						<div class="announcements-grid"></div>
+					</div>
+					<div class="trending">
+						<h2>Trending</h2>
+						<div class="trending-grid"></div>
+					</div>
+				</div>
+			</main>
 			<aside id="aside">
 				<div class="main-bar">
 					<img src="./images/logo-cyan.png" alt="" />
