started projects grid layout

--- a/index.html
+++ b/index.html
@@ -48,7 +48,18 @@
 				<div class="main-grid">
 					<div class="projects">
 						<h2>Your Projects</h2>
-						<div class="project-grid"></div>
+						<div class="project-grid">
+							<div class="project"></div>
+							<div class="project"></div>
+							<div class="project"></div>
+							<div class="project"></div>
+							<div class="project"></div>
+							<div class="project"></div>
+							<div class="project"></div>
+							<div class="project"></div>
+							<div class="project"></div>
+							<div class="project"></div>
+						</div>
 					</div>
 					<div class="announcements">
 						<h2>Announcements</h2>
