added trending section

--- a/index.html
+++ b/index.html
@@ -63,11 +63,41 @@
 					</div>
 					<div class="announcements">
 						<h2>Announcements</h2>
-						<div class="announcements-grid"></div>
+						<div class="announcements-grid">
+							<div class="message">
+								<a href=""><h4>Site Maintainance</h4></a>
+								<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+							</div>
+							<div class="message">
+								<a href=""><h4>New Update</h4></a>
+								<p>
+									Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+									Dolor maiores iste non illum iure.
+								</p>
+							</div>
+							<div class="message"></div>
+						</div>
 					</div>
 					<div class="trending">
 						<h2>Trending</h2>
-						<div class="trending-grid"></div>
+						<div class="trending-grid">
+							<div class="user">
+								<img src="./images/1.png" alt="" />
+								<h5>@tegan <br /><span> Gaming App</span></h5>
+							</div>
+							<div class="user">
+								<img src="./images/2.png" alt="" />
+								<h5>@morgan <br /><span> Harvesting App</span></h5>
+							</div>
+							<div class="user">
+								<img src="./images/3.png" alt="" />
+								<h5>@kendall <br /><span> E-commerce</span></h5>
+							</div>
+							<div class="user">
+								<img src="./images/4.png" alt="" />
+								<h5>@alex <br /><span> rent-a-car</span></h5>
+							</div>
+						</div>
 					</div>
 				</div>
 			</main>
