added Responsive design

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							</div>
 							<div class="user">
 								<img src="./images/2.png" alt="" />
-								<h5>@morgan <br /><span> Harvesting App</span></h5>
+								<h5>@morgan <br /><span> Harvesting Development</span></h5>
 							</div>
 							<div class="user">
 								<img src="./images/3.png" alt="" />
@@ -95,7 +95,7 @@
 							</div>
 							<div class="user">
 								<img src="./images/4.png" alt="" />
-								<h5>@alex <br /><span> rent-a-car</span></h5>
+								<h5>@alex <br /><span> Player Management</span></h5>
 							</div>
 						</div>
 					</div>
