--- a/index.html
+++ b/index.html
@@ -49,16 +49,153 @@
 					<div class="projects">
 						<h2>Your Projects</h2>
 						<div class="project-grid">
-							<div class="project"></div>
-							<div class="project"></div>
-							<div class="project"></div>
-							<div class="project"></div>
-							<div class="project"></div>
-							<div class="project"></div>
-							<div class="project"></div>
-							<div class="project"></div>
-							<div class="project"></div>
-							<div class="project"></div>
+							<div class="project">
+								<div>
+									<h4 class="project-title">Bear Market</h4>
+									<p class="project-desc">
+										Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+										Laborum fugit omnis aspernatur a odit rem corporis debitis
+										error animi ea. Rerum magnam alias at! Libero iste voluptas
+										quisquam amet sequi?Bear Market
+									</p>
+								</div>
+								<div class="project-resources">
+									<i class="fa-solid fa-bookmark"></i>
+									<i class="fa-solid fa-share"></i>
+									<i class="fa-solid fa-eye"></i>
+								</div>
+							</div>
+							<div class="project">
+								<div>
+									<h4 class="project-title">3D Pacman</h4>
+									<p class="project-desc">
+										Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+										Laborum fugit omnis aspernatur a odit rem corporis
+									</p>
+								</div>
+								<div class="project-resources">
+									<i class="fa-solid fa-bookmark"></i>
+									<i class="fa-solid fa-share"></i>
+									<i class="fa-solid fa-eye"></i>
+								</div>
+							</div>
+							<div class="project">
+								<div>
+									<h4 class="project-title">Willy Wonka Movie</h4>
+									<p class="project-desc">
+										Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+										Laborum fugit omnis aspernatur a odit rem corporis debitis
+										error animi ea.
+									</p>
+								</div>
+								<div class="project-resources">
+									<i class="fa-solid fa-bookmark"></i>
+									<i class="fa-solid fa-share"></i>
+									<i class="fa-solid fa-eye"></i>
+								</div>
+							</div>
+							<div class="project">
+								<div>
+									<h4 class="project-title">Water Farming</h4>
+									<p class="project-desc">
+										Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+										Laborum fugit omnis aspernatur a odit rem corporis debitis
+										error animi ea. Rerum magnam alias at! Libero iste voluptas
+										quisquam amet sequi?Bear Market
+									</p>
+								</div>
+								<div class="project-resources">
+									<i class="fa-solid fa-bookmark"></i>
+									<i class="fa-solid fa-share"></i>
+									<i class="fa-solid fa-eye"></i>
+								</div>
+							</div>
+							<div class="project">
+								<div>
+									<h4 class="project-title">E-commerce</h4>
+									<p class="project-desc">
+										Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+										Laborum fugit omnis aspernatur a odit rem corporis debitis
+										error animi ea.
+									</p>
+								</div>
+								<div class="project-resources">
+									<i class="fa-solid fa-bookmark"></i>
+									<i class="fa-solid fa-share"></i>
+									<i class="fa-solid fa-eye"></i>
+								</div>
+							</div>
+							<div class="project">
+								<div>
+									<h4 class="project-title">Photography App</h4>
+									<p class="project-desc">
+										Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+									</p>
+								</div>
+								<div class="project-resources">
+									<i class="fa-solid fa-bookmark"></i>
+									<i class="fa-solid fa-share"></i>
+									<i class="fa-solid fa-eye"></i>
+								</div>
+							</div>
+							<div class="project">
+								<div>
+									<h4 class="project-title">Crypto Stats</h4>
+									<p class="project-desc">
+										Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+										Laborum fugit omnis aspernatur a odit rem corporis debitis
+										error animi ea.
+									</p>
+								</div>
+								<div class="project-resources">
+									<i class="fa-solid fa-bookmark"></i>
+									<i class="fa-solid fa-share"></i>
+									<i class="fa-solid fa-eye"></i>
+								</div>
+							</div>
+							<div class="project">
+								<div>
+									<h4 class="project-title">Computer Science</h4>
+									<p class="project-desc">
+										Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+										Laborum fugit omnis aspernatur a odit rem corporis debitis.
+									</p>
+								</div>
+								<div class="project-resources">
+									<i class="fa-solid fa-bookmark"></i>
+									<i class="fa-solid fa-share"></i>
+									<i class="fa-solid fa-eye"></i>
+								</div>
+							</div>
+							<div class="project">
+								<div>
+									<h4 class="project-title">Pixel Art App</h4>
+									<p class="project-desc">
+										Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+										Laborum fugit omnis aspernatur.
+									</p>
+								</div>
+								<div class="project-resources">
+									<i class="fa-solid fa-bookmark"></i>
+									<i class="fa-solid fa-share"></i>
+									<i class="fa-solid fa-eye"></i>
+								</div>
+							</div>
+							<div class="project">
+								<div>
+									<h4 class="project-title">Web Development</h4>
+									<p class="project-desc">
+										Laborum fugit omnis aspernatur a odit rem corporis debitis
+										error animi ea. Rerum magnam alias at! Libero iste voluptas
+										quisquam amet sequi?Bear Market
+									</p>
+								</div>
+								<div class="project-resources">
+									<i class="fa-solid fa-bookmark"></i>
+									<i class="fa-solid fa-share"></i>
+									<i class="fa-solid fa-eye"></i>
+								</div>
+							</div>
 						</div>
 					</div>
 					<div class="announcements">
