--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 							</div>
 							<div class="user">
 								<img src="./images/2.png" alt="" />
-								<h5>@morgan <br /><span> Harvesting Development</span></h5>
+								<h5>@morgan <br /><span> Harvesting Dev</span></h5>
 							</div>
 							<div class="user">
 								<img src="./images/3.png" alt="" />
